Eksperimen and Otomasi Data Pipeline

--- a/Eksperimen_SML_FayzulHaq/preprocessing/eksperimen_FayzulHaq.ipynb
+++ b/Eksperimen_SML_FayzulHaq/preprocessing/eksperimen_FayzulHaq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7adf83b2",
    "metadata": {},
    "outputs": [
@@ -220,14 +220,13 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
     "\n",
-    "# Ganti path sesuai lokasi file Anda\n",
     "df = pd.read_csv('../data_raw/WA_Fn-UseC_-Telco-Customer-Churn.csv')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "094a4a57",
    "metadata": {},
    "outputs": [
@@ -298,7 +297,7 @@
     "\n",
     "# Visualisasi Korelasi Numerik\n",
     "plt.figure(figsize=(10,8))\n",
-    "# Kita hanya ambil kolom numerik untuk korelasi awal\n",
+    "\n",
     "numeric_df = df.select_dtypes(include=['number'])\n",
     "sns.heatmap(numeric_df.corr(), annot=True, cmap='coolwarm')\n",
     "plt.title('Korelasi Fitur Numerik')\n",
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5fae2680",
    "metadata": {},
    "outputs": [
@@ -320,11 +319,10 @@
     }
    ],
    "source": [
-    "# Masalah umum Telco Churn: TotalCharges terbaca sebagai object karena ada spasi kosong \" \"\n",
     "# Ubah ke numeric, paksa error jadi NaN\n",
     "df['TotalCharges'] = pd.to_numeric(df['TotalCharges'], errors='coerce')\n",
     "\n",
-    "# Isi NaN dengan median atau drop (kita drop saja karena sedikit)\n",
+    "# Isi NaN dengan median atau drop\n",
     "df = df.dropna()\n",
     "\n",
     "# Drop customerID karena tidak berguna untuk prediksi\n",
@@ -335,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "33e1eab7",
    "metadata": {},
    "outputs": [
@@ -576,7 +574,7 @@
     "categorical_cols = df.select_dtypes(include=['object']).columns\n",
     "df = pd.get_dummies(df, columns=categorical_cols, drop_first=True)\n",
     "\n",
-    "# Scaling fitur numerik (Opsional tapi bagus untuk Neural Network/Logistic Regression)\n",
+    "# Scaling fitur numerik\n",
     "scaler = StandardScaler()\n",
     "numerical_cols = ['tenure', 'MonthlyCharges', 'TotalCharges']\n",
     "df[numerical_cols] = scaler.fit_transform(df[numerical_cols])\n",
